results/classifier/zero-shot/118/review/825
register: 0.874
peripherals: 0.864
graphic: 0.850
virtual: 0.847
device: 0.837
mistranslation: 0.828
arm: 0.816
semantic: 0.813
debug: 0.806
permissions: 0.805
user-level: 0.795
assembly: 0.793
boot: 0.793
hypervisor: 0.784
PID: 0.774
vnc: 0.773
performance: 0.771
architecture: 0.748
risc-v: 0.739
VMM: 0.737
ppc: 0.732
kernel: 0.730
TCG: 0.710
socket: 0.699
network: 0.664
KVM: 0.625
files: 0.578
x86: 0.490
i386: 0.392
--------------------
virtual: 0.089
TCG: 0.071
x86: 0.052
ppc: 0.046
debug: 0.043
files: 0.033
kernel: 0.024
hypervisor: 0.020
PID: 0.018
KVM: 0.017
i386: 0.016
register: 0.016
VMM: 0.016
risc-v: 0.015
socket: 0.014
network: 0.011
semantic: 0.010
device: 0.009
performance: 0.006
user-level: 0.005
peripherals: 0.004
permissions: 0.003
vnc: 0.003
arm: 0.003
graphic: 0.003
boot: 0.002
architecture: 0.002
assembly: 0.001
mistranslation: 0.001

compilation error - "VIRTIO_F_VERSION"
Description of problem:
Encountered problem while "make"

....
`[65/2464] Compiling C object subprojects/libvhost-user/libvhost-user.a.p/libvhost-user.c.o
FAILED: subprojects/libvhost-user/libvhost-user.a.p/libvhost-user.c.o 
cc -m64 -mcx16 -Isubprojects/libvhost-user/libvhost-user.a.p -Isubprojects/libvhost-user -I../subprojects/libvhost-user -fdiagnostics-color=auto -Wall -Winvalid-pch -Werror -std=gnu11 -O2 -g -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -Wstrict-prototypes -Wredundant-decls -Wundef -Wwrite-strings -Wmissing-prototypes -fno-strict-aliasing -fno-common -fwrapv -Wold-style-declaration -Wold-style-definition -Wtype-limits -Wformat-security -Wformat-y2k -Winit-self -Wignored-qualifiers -Wempty-body -Wnested-externs -Wendif-labels -Wexpansion-to-defined -Wimplicit-fallthrough=2 -Wno-missing-include-dirs -Wno-shift-negative-value -Wno-psabi -fstack-protector-strong -fPIE -pthread -D_GNU_SOURCE -MD -MQ subprojects/libvhost-user/libvhost-user.a.p/libvhost-user.c.o -MF subprojects/libvhost-user/libvhost-user.a.p/libvhost-user.c.o.d -o subprojects/libvhost-user/libvhost-user.a.p/libvhost-user.c.o -c ../subprojects/libvhost-user/libvhost-user.c
../subprojects/libvhost-user/libvhost-user.c: In function 'vu_get_features_exec':
../subprojects/libvhost-user/libvhost-user.c:508:17: error: 'VIRTIO_F_VERSION_1' undeclared (first use in this function); did you mean 'INFLIGHT_VERSION'?
         1ULL << VIRTIO_F_VERSION_1 |
                 ^~~~~~~~~~~~~~~~~~
                 INFLIGHT_VERSION
../subprojects/libvhost-user/libvhost-user.c:508:17: note: each undeclared identifier is reported only once for each function it appears in
../subprojects/libvhost-user/libvhost-user.c: In function 'vu_set_features_exec':
../subprojects/libvhost-user/libvhost-user.c:542:30: error: 'VIRTIO_F_VERSION_1' undeclared (first use in this function); did you mean 'INFLIGHT_VERSION'?
     if (!vu_has_feature(dev, VIRTIO_F_VERSION_1)) {
                              ^~~~~~~~~~~~~~~~~~
                              INFLIGHT_VERSION
../subprojects/libvhost-user/libvhost-user.c: In function 'generate_faults':
../subprojects/libvhost-user/libvhost-user.c:612:13: error: unused variable 'ret' [-Werror=unused-variable]
         int ret;
             ^~~
../subprojects/libvhost-user/libvhost-user.c:611:22: error: unused variable 'dev_region' [-Werror=unused-variable]
         VuDevRegion *dev_region = &dev->regions[i];
                      ^~~~~~~~~~
cc1: all warnings being treated as errors
ninja: build stopped: subcommand failed.
make[1]: *** [Makefile:163: run-ninja] Error 1
make[1]: Leaving directory '/users/oneuser/qemu/qemu/build'
make: *** [GNUmakefile:11: all] Error 2
`
Steps to reproduce:
1. ./configure --prefix=/users/oneuser/qemu/myqemu-1 --enable-kvm  --target-list=x86_64-softmmu 
2. make
3.
Additional information:
Please let me know if more info is needed.
